# kameoBotRebuild

./: .cursorrules  .env.example  .gitignore  CLEANUP_REPORT.md  README.md  README_LOAN_COLLECTOR.md  USER_GUIDE.md  auth.py  bidding_cli.py  changelog.md  config.py  get_it_done.py  kameo_client.py  loan_collector.py  loans.db  pyproject.toml  requirements.txt  run.py  simple_bidding.py  start.sh  test_kameo.py  webapp.py
.cursor/rules/: python-service-architecture.mdc  python_dev_standards.rule
data/har/: landing_login_aktuella_noLoan.har  landing_login_aktuella_noLoan_2.har
docs/: api_documentation_review_prompt.md  api_overview.md  async_process_demo.html  kameo_api_index.md  kameo_api_quickstart.md  projektplan.md  techstack.md  user_flows.html  wlkthru_plaintext.md
document/: IMPLEMENTATION_SUMMARY.md  KAMEO_BOT_UX_SYSTEM.md  async_process_demo.html  graph TD.md  kameo_api_examples.md  kameo_api_technical_reference.md  kameo_api_user_guide.md  projektplan.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx
logs/debug/: loans_listing_1_20250713_172246.json  loans_listing_2_20250713_172246.json  loans_listing_3_20250713_172246.json
src/: __init__.py  api.py  auth.py  cli.py  config.py  kameo_client.py  websocket_handler.py
src/database/: __init__.py  config.py  connection.py
src/models/: __init__.py  base.py  loan.py
src/services/: __init__.py  bidding_service.py  http_client.py  (+6 more)
tests/: conftest.py  simple_bidding.py  test_api_comprehensive.py  test_async_flow.py  test_client.py  test_loan_collector.py
(+8 files in other folders)
